Fix (error word break): Fixed word break on ingest dashboard error

--- a/client/app/scripts/superdesk-ingest/styles/dashboard.less
+++ b/client/app/scripts/superdesk-ingest/styles/dashboard.less
@@ -108,6 +108,7 @@
             }
         }
         .error {
+            word-wrap: break-word;
             color: @red;
             padding: 5px;    
         }
